--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@
     padding-right: 30px;
     width: 320px !important;
 }
+ #Services {
+    background-color: #f3f9ff;
+ }
+
 .phone-img {
     width: 100%;
     height: auto;
