--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,10 +27,10 @@
  .Services {
     background-color:#f3f9ff;
  }
- #Pricing{
+ .Pricing{
     background-color:#f3f9ff ;
  }
-#Contact{
+.Contact .Testimonials{
      background-color:#f3f9ff ;
 }
 .phone-img {
