--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@
  .Pricing{
     background-color:#f3f9ff ;
  }
-.Contact .Testimonials{
+.Contact ,.Testimonials{
      background-color:#f3f9ff ;
 }
 .phone-img {
